fix: overlap between 0 and min max labels

--- a/src/app/dashboard/hex-map/legend/legend.component.scss
+++ b/src/app/dashboard/hex-map/legend/legend.component.scss
@@ -24,7 +24,8 @@
   position: relative;
   border: 1px solid #ccc;
   border-radius: 4px;
-  overflow: hidden;
+  overflow: visible;
+  margin: 0 5px;
   height: 20px;
   width: 100%;
   background: white;
